[package]
name = "rwasm_macro"
version = "0.1.0"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/rellfy/rwasm"
repository = "https://github.com/rellfy/rwasm"
description = "rwasm procedural macro"

[lib]
proc-macro = true

[dependencies]
